# expressioneditor

./: .gitignore  CMakeLists.txt  CREDITS.txt  Makefile  README.txt  alternativesgraphicsitem.cpp  alternativesgraphicsitem.hpp  blockhighlighter.cpp  blockhighlighter.hpp  blocktester.cpp  blocktester.hpp  capturedstring.cpp  capturedstring.hpp  charrangegraphicsitem.cpp  charrangegraphicsitem.hpp  cmakeconfig.hpp  cmakeconfig.hpp.in  commentgraphicsitem.cpp  commentgraphicsitem.hpp  configgraphicsitem.cpp  configgraphicsitem.hpp  doxy.conf  expressionedit.cpp  expressionedit.hpp  expressioneditor.cpp  expressioneditor.hpp  expressioneditor.pro  expressioneditor.pro.user.2.2pre5  expressiongraphicsscene.cpp  expressiongraphicsscene.hpp  expressionhighlighter.cpp  expressionhighlighter.hpp  expressiontester.cpp  expressiontester.hpp  graphicaleditor.cpp  graphicaleditor.hpp  graphicalexpression.cpp  graphicalexpression.hpp  graphicaltoolkit.cpp  graphicaltoolkit.hpp  (+58 more)
GraphicsItems/: alternationgraphicsitem.cpp  alternationgraphicsitem.hpp  alternativesgraphicsitem.cpp  alternativesgraphicsitem.hpp  anchorgraphicsitem.cpp  anchorgraphicsitem.hpp  bracketexpressiongraphicsitem.cpp  bracketexpressiongraphicsitem.hpp  characterclassitem.cpp  characterclassitem.hpp  charrangegraphicsitem.cpp  charrangegraphicsitem.hpp  commentgraphicsitem.cpp  commentgraphicsitem.hpp  configgraphicsitem.cpp  configgraphicsitem.hpp  errorgraphicsitem.cpp  errorgraphicsitem.hpp  expressiongraphicsitem.cpp  expressiongraphicsitem.hpp  groupinggraphicsitem.cpp  groupinggraphicsitem.hpp  literalgraphicsitem.cpp  literalgraphicsitem.hpp  placeholdergraphicsitem.cpp  placeholdergraphicsitem.hpp  regexgraphicsitem.cpp  regexgraphicsitem.hpp  repeatgraphicsitem.cpp  repeatgraphicsitem.hpp  specialchargraphicsitem.cpp  specialchargraphicsitem.hpp  textgraphicsitem.cpp  textgraphicsitem.hpp
RegexModules/: cpp0xregex.cpp  cpp0xregex.hpp  cpp11regex.cpp  cpp11regex.hpp  cppawkparser.cpp  cppawkparser.hpp  cppecmascriptparser.cpp  cppecmascriptparser.hpp  cppgrepparser.cpp  cppgrepparser.hpp  cppposixparser.cpp  cppposixparser.hpp  icuparser.cpp  icuparser.hpp  icuregex.cpp  icuregex.hpp  parser.cpp  parser.hpp  pcreparser.cpp  pcreparser.hpp  pcreregex.cpp  pcreregex.hpp  perlregex.cpp  perlregex.hpp  posixparser.cpp  posixparser.hpp  posixregex.cpp  posixregex.hpp  qtparser.cpp  qtparser.hpp  qtregex.cpp  qtregex.hpp  regexbase.cpp  regexbase.hpp  token.cpp  token.hpp  tokens.hpp
android/: AndroidManifest.xml  build.xml  local.properties
android/libs/armeabi/: gdbserver
android/res/values/: strings.xml
android/src/org/kde/necessitas/origo/: QtActivity.java
common/: email.regex  ipaddress.regex  url.regex
css/: main.css
images/application-icon/: Icon.ai  expressioneditor.icns
